--- a/css.css
+++ b/css.css
@@ -7,11 +7,13 @@
     --accent2 - light:  # 00a4db;
     --accent2 - dark:  # 003d52
 }
-.backgroundContainer {
-    background - color:  # 010e18
-}
 .backgroundContainer.withBackdrop {
     background: transparent!important
+}
+.backdropContainer {
+    filter: blur(0px)brightness(70 % )saturate(110 % )contrast(130 % );
+    mask - image: linear - gradient(180deg,  # 000, transparent);
+    -webkit - mask - image: linear - gradient(180deg,  # 000, transparent)
 }
 .withTabs.content - primary {
     padding - top: 1em!important
